--- a/views/profile.jade
+++ b/views/profile.jade
@@ -1,6 +1,40 @@
 extends layout
 
 block _profile
-	div#header
-		ul 
-			li 
+	div#header-profile
+		div#header-profile-left
+			ul
+				li Logo
+
+		div#header-profile-right
+			ul 
+				li My Contacts
+				li Profile
+	div#body-profile
+		div#body-profile-left
+			img(src="/images/profile_jethia.jpeg",width="200px",height="200px")
+			h2 
+				span WORK 
+			ul
+				li.job Gada Electronics
+				li.cur
+					span CURRENT
+			p.info Borivali , Mumbai
+			h2 
+				span SKILLS
+			ul#skills
+				li Bijness skills
+				li Gud son
+				li Gud Father
+				li Gud Husband
+				li Legend
+		div#body-profile-mid
+			ul 
+				li 
+					h1 Jethalal Gada
+				li
+					span.fa.fa-map-marker
+				li 
+					span#place Bhachau , Gujarat
+		div#body-profile-right
+	
