node_modules/.bin/semver 	node_modules/bson/ 	node_modules/mongodb-core/ 	node_modules/mongodb/ 	node_modules/require_optional/ 	node_modules/resolve-from/ 	node_modules/saslprep/ 	node_modules/semver/ 	public/fonts/ 	public/images/index.jpeg 	public/images/profile_jethia.jpeg 	public/javascripts/styling.js 	public/stylesheets/info.css 	public/stylesheets/profile.css 	public/stylesheets/res.css 	readme.md         views/info.jade

--- a/views/index.jade
+++ b/views/index.jade
@@ -17,15 +17,14 @@ block _body
 				A cool tagline here.
 		div#login-form
 			h1 Login
-			form(action="/submit")
+			div#form-login
 				ul
 					li
-						input(type="text",placeholder="Username")
-							
+						input(type="text",placeholder="Username")			
 					li
 						input(type="password",placeholder="Password")
 					li
-						input(type="submit",value="Log in")
+						input(type="submit",value="Log in",onclick="login()")
 					li
 						span#forgot-text(onclick="makeVisible()") Forgot Password?
 					li
