--- a/views/profile.jade
+++ b/views/profile.jade
@@ -29,12 +29,31 @@ block _profile
 				li Gud Husband
 				li Legend
 		div#body-profile-mid
-			ul 
+			ul#info-name
 				li 
 					h1 Jethalal Gada
-				li
+				li#marker
 					span.fa.fa-map-marker
-				li 
+				li#place 
 					span#place Bhachau , Gujarat
-		div#body-profile-right
+			h6 Bijness Man
+			h3 Score : 
+				span#score 8.73
+			h2 
+				span ABOUT
+			div#about-basic
+				h5 Contact
+				ul
+					li E-mail : 
+						span jethialovesbabita@qwerty.com
+					li Site :
+						span www.jethiababuchak.com
+				h5 Basic Info
+				ul
+					li Birthday:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						span 30 Feb 1951
+					li Gender:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   
+						span Male
+		div#collaborate-button
+			span Collaborate
 	
