--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,11 +8,15 @@ html
     link(rel='stylesheet',href="/stylesheets/signup.css")
     link(rel='stylesheet',href="/stylesheets/forgot.css")
     link(rel='stylesheet',href="/stylesheets/profile.css")
+    link(rel='stylesheet',href="/stylesheets/info.css")
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css',crossorigin="anonymous")
     link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.1.0/css/all.css", integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt", crossorigin="anonymous")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     script(src="javascripts/script.js")
+    script(src="javascripts/styling.js")
     script(src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js")
+    link(rel='stylesheet',href="/stylesheets/res.css")
+
 
   body
     block _header
@@ -21,3 +25,4 @@ html
     block _signup
     block _reset
     block _profile
+    block _info
