--- a/views/profile.jade
+++ b/views/profile.jade
@@ -16,27 +16,22 @@ block _profile
 			h2 
 				span WORK 
 			ul
-				li.job Gada Electronics
-				li.cur
+				li.job // Job
+				li.cur 
 					span CURRENT
-			p.info Borivali , Mumbai
+			p.info 
 			h2 
 				span SKILLS
 			ul#skills
-				li Bijness skills
-				li Gud son
-				li Gud Father
-				li Gud Husband
-				li Legend
 		div#body-profile-mid
 			ul#info-name
 				li 
-					h1 Jethalal Gada
+					h1 //name
 				li#marker
 					span.fa.fa-map-marker
 				li#place 
-					span#place Bhachau , Gujarat
-			h6 Bijness Man
+					span#place //live
+			h6 // role
 			h3 Score : 
 				span#score 8.73
 			h2 
@@ -45,15 +40,15 @@ block _profile
 				h5 Contact
 				ul
 					li E-mail : 
-						span jethialovesbabita@qwerty.com
+						span 
 					li Site :
-						span www.jethiababuchak.com
+						span 
 				h5 Basic Info
 				ul
 					li Birthday:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-						span 30 Feb 1951
+						span 
 					li Gender:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   
-						span Male
+						span 
 		div#collaborate-button
 			span Collaborate
 	
