--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,10 +14,11 @@ html
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     script(src="javascripts/script.js")
     script(src="javascripts/styling.js")
+    script(src="javascripts/profile.js")
+    script(src="javascripts/info.js")
     script(src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js")
     link(rel='stylesheet',href="/stylesheets/res.css")
-
-
+    link(rel='stylesheet',href="/stylesheets/otherinfo.css")
   body
     block _header
     block _body
@@ -26,3 +27,4 @@ html
     block _reset
     block _profile
     block _info
+    block _other
