modified:   app.js 	new file:   public/javascripts/eventdb.js 	new file:   public/stylesheets/addevent.css 	modified:   public/stylesheets/landing.css 	modified:   public/stylesheets/profile.css 	modified:   public/stylesheets/signup.css 	new file:   routes/eventdb.js 	modified:   views/landing_login.jade 	modified:   views/profile.jade

--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -20,7 +20,7 @@
 	list-style: none;
 }
 
-#signup-container input[type=text] ,#signup-container input[type=password] , #signup-container input[type=email] {
+#signup-container input[type=text] ,#signup-container input[type=password] , #signup-container input[type=email] , #container-add-event input[type=text]{
     border : none;
     border-bottom : 1px solid grey;
     width : 83%;
@@ -57,3 +57,4 @@
     text-decoration: none;
     cursor : pointer;
 }
+
