modified:   public/javascripts/.connection.js.swp 	new file:   public/javascripts/.eventdb.js.swp 	new file:   public/javascripts/.info.js.swp 	new file:   public/javascripts/.request.js.swp 	modified:   public/javascripts/connection.js 	modified:   public/javascripts/dynamic_load.js 	modified:   public/javascripts/eventdb.js 	modified:   public/javascripts/info.js 	modified:   public/javascripts/request.js 	modified:   public/javascripts/script.js 	new file:   public/stylesheets/.body.css.swp 	new file:   public/stylesheets/.header.css.swp 	modified:   public/stylesheets/body.css 	new file:   public/stylesheets/header.css 	modified:   public/stylesheets/otherinfo.css 	modified:   public/stylesheets/signup.css 	modified:   routes/.eventdb.js.swp 	new file:   routes/.index.js.swp 	new file:   routes/.pass_reset.js.swp 	modified:   routes/.register.js.swo 	modified:   routes/eventdb.js 	modified:   routes/pass_reset.js 	new file:   views/.landing_login.jade.swp 	modified:   views/connections.jade 	new file:   views/header.jade 	modified:   views/index.jade 	modified:   views/landing_login.jade 	modified:   views/layout.jade 	modified:   views/profile.jade 	modified:   views/request.jade

--- a/views/connections.jade
+++ b/views/connections.jade
@@ -3,7 +3,9 @@ html
         title Connections
         script(src="/javascripts/connection.js")
         link(rel="stylesheet",href="/stylesheets/connection.css")
+        link(rel="stylesheet",href="/stylesheets/header.css")
     body(onload='load_connections()')
+        include ./header.jade
         div#connections
             //div.connection-div
                 div
