--- a/views/index.jade
+++ b/views/index.jade
@@ -14,7 +14,7 @@ block _body
 	div#main_body
 		div#text
 			p(onclick="foo()").
-				A cool tagline here.
+				Collaborate with game developers.
 		div#login-form
 			h1 Login
 			div#form-login
