--- a/views/landing_login.jade
+++ b/views/landing_login.jade
@@ -3,5 +3,7 @@ html
         title Events
         script(src="/javascripts/eventdb.js")
         link(rel="stylesheet",href="/stylesheets/landing.css")
+        link(rel="stylesheet",href="/stylesheets/header.css")
     body(onload = 'load_page()')
+        include ./header.jade
         div#landing-container
