modified:   public/javascripts/connection.js 	modified:   public/javascripts/dynamic_load.js 	modified:   public/javascripts/eventdb.js 	modified:   public/javascripts/request.js 	new file:   public/javascripts/search_users.js         modified:   public/stylesheets/header.css 	modified:   routes/render_user.js 	modified:   views/connections.jade 	modified:   views/header.jade 	modified:   views/landing_login.jade 	modified:   views/layout.jade 	modified:   views/profile.jade 	modified:   views/request.jade

--- a/views/connections.jade
+++ b/views/connections.jade
@@ -2,6 +2,7 @@ html
     head
         title Connections
         script(src="/javascripts/connection.js")
+        script(src="javascripts/search_users.js")
         link(rel="stylesheet",href="/stylesheets/connection.css")
         link(rel="stylesheet",href="/stylesheets/header.css")
     body(onload='load_connections()')
