--- a/views/landing_login.jade
+++ b/views/landing_login.jade
@@ -2,6 +2,7 @@ html
     head
         title Events
         script(src="/javascripts/eventdb.js")
+        script(src="javascripts/search_users.js")
         link(rel="stylesheet",href="/stylesheets/landing.css")
         link(rel="stylesheet",href="/stylesheets/header.css")
     body(onload = 'load_page()')
