--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,6 +16,7 @@ html
     script(src="javascripts/styling.js")
     script(src="javascripts/profile.js")
     script(src="javascripts/info.js")
+    script(src="javascripts/search_users.js")
     script(src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js")
     link(rel='stylesheet',href="/stylesheets/res.css")
     link(rel='stylesheet',href="/stylesheets/otherinfo.css")
