--- a/views/request.jade
+++ b/views/request.jade
@@ -2,6 +2,7 @@ html
     head
         title Requests
         script(src="/javascripts/request.js")
+        script(src="javascripts/search_users.js")
         link(rel="stylesheet",href="/stylesheets/request.css")
         link(rel="stylesheet",href="/stylesheets/header.css")
         link(rel="stylesheet",href="/stylesheets/header.js")
