--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -22,6 +22,59 @@ body {
     cursor : pointer;
 }
 
+#search {
+    position : absolute;
+    top : 23px;
+    left : 600px;
+}
+
+#search-results {
+    position: absolute;
+    width: 200px;
+    background: white;
+    height: 110px;
+    top: 52px;
+    left: 600px;
+    z-index: 5000;
+    overflow : scroll;
+    display : none;
+}
+
+#search-results .fetched-results {
+    position : absolute;
+    width : 100%;
+    height : 45px;
+    top : 0;
+    left : 0;
+    background : #d1e2ff;
+    cursor : pointer;
+}
+
+#search-results .fetched-results:hover {
+    background : #8eb8ff;
+}
+
+.fetched-results div {
+    background : black;
+    width : 40px;
+    height : 40px;
+    position : absolute;
+    top : 2px;
+    left : 3px;
+    border-right : 1px solid black;
+}
+
+.fetched-results span {
+    font-size: 11px;
+    position: absolute;
+    top: 14px;
+    left: 55px;
+}
+
+.fetched-results h1 {
+    display : none;
+}
+
 #header #logo h2:hover {
     color : red;
 }
@@ -41,20 +94,26 @@ body {
     position: absolute;
     top: 0;
     left: -238px;
-    text-decoration : underline;
-    background : orange;
-    cursor : pointer;
+    background: #8eb9ff;
+    cursor: pointer;
+    width: 113px;
+    text-align: center;
+    height: 35px;
+    border-radius: 9px;
 }
 
 #header-right #header-right-prof {
     position: absolute;
     top: 0;
     left: -62px;
-    text-decoration : underline;
-    background : orange;
-    cursor : pointer;
+    background: #8eb9ff;
+    cursor: pointer;
+    width: 113px;
+    text-align: center;
+    height: 35px;
+    border-radius: 9px;
 }
 
 #header-right #header-right-prof:hover , #header-right #header-right-net:hover {
-    background : blue;
+    background : #7da5e8;
 }
