--- a/views/profile.jade
+++ b/views/profile.jade
@@ -5,6 +5,7 @@ html
         script(src="/javascripts/dynamic_load.js")
         script(src="/javascripts/eventdb.js")
         script(src="/javascripts/request.js")
+        script(src="javascripts/search_users.js")
         link(rel="stylesheet",href="/stylesheets/profile.css")
         link(rel="stylesheet",href="/stylesheets/header.css")
         link(rel="stylesheet",href="/stylesheets/addevent.css") 
@@ -20,7 +21,6 @@ html
             div#body-profile-mid
                 ul#info-name
                 h6
-                h3 Score : nil
                 h2
                     span ABOUT
                 div#about-basic
